start a study page
